[project]
name = "brreg"
version = "1.2.0"
description = "API client for Brønnøysundregistrene."
authors = [{ name = "Stein Magnus Jodal", email = "stein.magnus@jodal.no" }]
requires-python = ">=3.9"
readme = "README.md"
license = "Apache-2.0"
keywords = ["brreg", "enhetsregisteret"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.24", "pydantic>=2"]

[project.urls]
Homepage = "https://github.com/crdbrd/python-brreg"
Repository = "https://github.com/crdbrd/python-brreg"
Documentation = "https://brreg.readthedocs.io"

[dependency-groups]
dev = [
    "nox>=2024.10.9",
    { include-group = "docs" },
    { include-group = "mypy" },
    { include-group = "pyright" },
    { include-group = "ruff" },
    { include-group = "tests" },
]
docs = [
    "sphinx>=5.3",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.12",
]
mypy = ["mypy==1.11.1"]
pyright = ["pyright==1.1.394"]
ruff = ["ruff==0.9.6"]
tests = [
    "coverage[toml]>=7.4.1",
    "pytest>=7.4.4",
    "pytest-cov>=4.1",
    "pytest-httpx==0.35.0",
    "pytest-watcher>=0.4.1",
]


[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["brreg"]

[tool.coverage.report]
fail_under = 100
show_missing = true


[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = ["error::RuntimeWarning"]


[tool.mypy]
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "brreg.*"
disallow_untyped_defs = true


[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # These rules interfere with `ruff format`
    "COM812",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["INP001"]
"tests/*" = [
    "D",       # pydocstyle
    "PLR2004", # magic-value-comparison
    "S101",    # assert
]

[tool.ruff.lint.isort]
known-first-party = ["brreg"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"
# Already covered by tests and careful import ordering:
reportImportCycles = false
# Already covered by flake8-self:
reportPrivateUsage = false


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
